--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="bpmn-js/dist/assets/diagram-js.css" />
+    <link rel="stylesheet" href="bpmn-js/dist/assets/bpmn-font/css/bpmn.css" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -30,6 +32,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div class="" id="canvas"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
