--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,7 +25,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>EBPM</title>
+
+  <!-- Fonts -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 
   <!-- BPMN-JS -->
   <!-- required modeler styles -->
@@ -42,7 +46,7 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root" class="h-100"></div>
+  <div id="root" class="vh-100"></div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
